--- a/CSS/main.css
+++ b/CSS/main.css
@@ -169,8 +169,8 @@ canvas {
 
   padding-top: 3%;
   padding-bottom: 3%;
-  margin-left: 0 auto;
-  margin-right: 0 auto;
+  margin-left:auto;
+  margin-right:auto;
 
 }
 
