--- a/VIEWS/DFA.html
+++ b/VIEWS/DFA.html
@@ -1,43 +1,47 @@
-<div>
-	<section>
-	    <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> DFA</h2>
-	    <p>Automata Finito Deterministico</p>
-	</section>
-	<section>
-		<canvas id="canvas" width="800" height="600">
-			<span class="error">Su navegador no soporta<br> HTML5 &lt;canvas&gt; element</span>
-		</canvas>
-		<div id ="actionControl">
-			<center><h3>Acciones</h3></center>
-			<label for="cadena">Cadena:</label>
-			<form class="form-inline">
-				<div class="form-group">
+<section>
+    <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> DFA</h2>
+    <p>Autómata Finito Deterministico</p>
+</section>
+<section>
+	<canvas id="canvas" width="800" height="600">
+		<span class="error">Su navegador no soporta<br> HTML5 &lt;canvas&gt; element</span>
+	</canvas>
+	<center><span>Mensaje de  Validación de DFA</span></center>
+	<hr>
+	<div id ="actionControl">
+		<center><h3>Acciones</h3></center>			
+		<div class="row">
+		  <div class="col-lg-12 col-md-4">
+		    <div class="panel-heading">
+		      <div class="row">
+		        <div class="form-group col-lg-4 col-md-8">		
 				  <input type="text" class="form-control col-xs-3" id="cadena" placeholder="Ingrese la cadena a probar">
-				  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="disableCanvas()">Probar</button>		  
-				</div>
-				<div class="form-group">
+				  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="disableCanvas()">Probar</button>		
+		        </div>
+		        <div class="form-group col-lg-4 col-md-8">
 				  <label>Transformar a NFA</label>
-				  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="DFAtoNFA()">To NFA</button>		  
-				</div>
-				<div class="form-group">
+				  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="DFAtoNFA()">To NFA</button>	
+		        </div>
+		        <div class="form-group col-lg-4 col-md-8">
 				  <label>Transformar a Regex</label>
-				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="DFAtoRegex()">To Regex</button>		  
-				</div>								
-			</form>
-		</div>
-		<hr>
-		<div>
-			<hr>		
-			<h2 id ="actionControl">Intrucciones para utilizar el diseñador</h2>
-			<ul>
-				<li><b>Agregar un estado:</b> doble click en el "Canvas-Cuadro Blanco".</li>
-				<li><b>Agregar una flecha:</b> shift-arrastrar en el canvas.</li>
-				<li><b>Mover algo:</b> arrastrarlo simplemente.</li>
-				<li><b>Borrar algo:</b> click en el objeto y apretar la tecla Delete-Suprimir.</li>
-				<li><b>Hacer un estado de aceptación:</b> doble click en un estado existente.</li>
-				<li><b>Escribir un símbolo de transición:</b>poner un guión bajo antes del número(Ejemplo "X_0").</li>
-				<li><b>Tipo letra griega:</b> Poner una barra invertida antes (como "\ Ejemplo").</li>			
-			</ul>
-		</div>
-	</section>    
-</div>
+				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="DFAtoRegex()">To Regex</button>	
+		        </div>			        
+		      </div>
+		    </div>
+		  </div>		  
+		</div>  
+	</div>
+	<div>
+		<hr>		
+		<h2 id ="actionControl">Intrucciones para utilizar el diseñador</h2>
+		<ul>
+			<li><b>Agregar un estado:</b> doble click en el "Canvas-Cuadro Blanco".</li>
+			<li><b>Agregar una flecha:</b> shift-arrastrar en el canvas.</li>
+			<li><b>Mover algo:</b> arrastrarlo simplemente.</li>
+			<li><b>Borrar algo:</b> click en el objeto y apretar la tecla Delete-Suprimir.</li>
+			<li><b>Hacer un estado de aceptación:</b> doble click en un estado existente.</li>
+			<li><b>Escribir un símbolo de transición:</b>poner un guión bajo antes del número(Ejemplo "X_0").</li>
+			<li><b>Tipo letra griega:</b> Poner una barra invertida antes (como "\ Ejemplo").</li>			
+		</ul>
+	</div>
+</section>    
