--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -1,29 +1,37 @@
 <section>
     <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> NFA</h2>
-    <p>Cargamos lo del NFA</p>
+    <p>Autómata Finito No Deterministico</p>
 </section>
-<section>	
+<section>
 	<canvas id="canvas" width="800" height="600">
 		<span class="error">Su navegador no soporta<br> HTML5 &lt;canvas&gt; element</span>
 	</canvas>
+	<center><span>Mensaje de  Validación de NFA</span></center>
+	<hr>
 	<div id ="actionControl">
-		<center><h3>Acciones</h3></center>
-		<label for="cadena">Cadena:</label>
-		<form class="form-inline">
-			<div class="form-group">
-			  <input type="text" class="form-control col-xs-3" id="cadena" placeholder="Ingrese la cadena a probar">
-			  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="disableCanvas()">Probar</button>		  
-			</div>
-			<div class="form-group">
-			  <label>Transformar a DFA</label>
-			  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="NFAtoDFA()">To DFA</button>		  
-			</div>
-			<div class="form-group">
-			  <label>Transformar a Regex</label>
-			  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoRegex()">To Regex</button>		  
-			</div>								
-		</form>
+		<center><h3>Acciones</h3></center>			
+		<div class="row">
+		  <div class="col-lg-12 col-md-4">
+		    <div class="panel-heading">
+		      <div class="row">
+		        <div class="form-group col-lg-4 col-md-8">		
+				  <input type="text" class="form-control col-xs-3" id="cadena" placeholder="Ingrese la cadena a probar">
+				  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="disableCanvas()">Probar</button>		
+		        </div>
+		        <div class="form-group col-lg-4 col-md-8">
+				  <label>Transformar a DFA</label>
+				  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="NFAtoDFA()">To DFA</button>	
+		        </div>
+		        <div class="form-group col-lg-4 col-md-8">
+				  <label>Transformar a Regex</label>
+				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoRegex()">To Regex</button>	
+		        </div>			        
+		      </div>
+		    </div>
+		  </div>		  
+		</div>  
 	</div>
+	<div>
 		<hr>		
 		<h2 id ="actionControl">Intrucciones para utilizar el diseñador</h2>
 		<ul>
