--- a/VIEWS/REGEX.html
+++ b/VIEWS/REGEX.html
@@ -1,6 +1,6 @@
 <section>
     <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> REGEX</h2>
-    <p>Cargamos lo del REGEX</p>
+    <p>Expresiones Regulares</p>
 <section>
 
 </section> 
