add get methods

--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -16,7 +16,7 @@
 		      <div class="row">
 		        <div class="form-group col-lg-4 col-md-8">		
 				  <input type="text" class="form-control col-xs-3" id="cadena" placeholder="Ingrese la cadena a probar">
-				  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="disableCanvas()">Probar</button>		
+				  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="consumeString()">Probar</button>		
 		        </div>
 		        <div class="form-group col-lg-4 col-md-8">
 				  <label>Transformar a DFA</label>
