--- a/VIEWS/DFA.html
+++ b/VIEWS/DFA.html
@@ -14,17 +14,24 @@
 		  <div class="col-lg-12 col-md-4">
 		    <div class="panel-heading">
 		      <div class="row">
-		        <div class="form-group col-lg-4 col-md-8">		
-				  <input type="text" class="form-control col-xs-3" id="cadena" placeholder="Ingrese la cadena a probar">
-				  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="consumeStringDFA()">Probar</button>		
-		        </div>
+		      	<div class="form-group btn-group col-lg-4 col-md-8">
+				  	<button type="button" class="btn btn-danger btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				    	Probar cadena
+				  	</button>
+				  	<div class="dropdown-menu">
+				    	<div class="form-group col-lg-12 col-md-12">
+				    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
+				  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringDFA()">Probar</button>		
+		        		</div>
+				  	</div>
+				</div>
 		        <div class="form-group col-lg-4 col-md-8">
-				  <label>Transformar a NFA</label>
-				  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="DFAtoNFA()">To NFA</button>	
+				  <label></label>
+				  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="DFAtoNFA()">Transformar a NFA</button>	
 		        </div>
 		        <div class="form-group col-lg-4 col-md-8">
 				  <label>Transformar a Regex</label>
-				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="DFAtoRegex()">To Regex</button>	
+				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="DFAtoRegex()"></button>	
 		        </div>			        
 		      </div>
 		    </div>
