--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -11,24 +11,29 @@
 	<div id ="actionControl">
 		<center><h3>Acciones</h3></center>			
 		<div class="row">
-		  <div class="col-lg-12 col-md-4">
-		    <div class="panel-heading">
-		      <div class="row">
-		        <div class="form-group col-lg-4 col-md-8">		
-				  <input type="text" class="form-control col-xs-3" id="cadena" placeholder="Ingrese la cadena a probar">
-				  <button type="button" class="btn btn-primary btn-md" id ="MarginButton" onclick="consumeString()">Probar</button>		
-		        </div>
-		        <div class="form-group col-lg-4 col-md-8">
-				  <label>Transformar a DFA</label>
-				  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="NFAtoDFA()">To DFA</button>	
-		        </div>
-		        <div class="form-group col-lg-4 col-md-8">
-				  <label>Transformar a Regex</label>
-				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoRegex()">To Regex</button>	
-		        </div>			        
-		      </div>
-		    </div>
-		  </div>		  
+		  	<div class="col-lg-12 col-md-4">
+				<div class="panel-heading">
+			      	<div class="row">
+			      		<div class="form-group btn-group col-lg-4 col-md-8">
+						  	<button type="button" class="btn btn-danger btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						    	Consumir cadena
+						  	</button>
+						  	<div class="dropdown-menu">
+						    	<div class="form-group col-lg-12 col-md-12">
+						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
+						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringNFA()">Probar</button>		
+				        		</div>
+						  	</div>
+						</div>
+			        	<div class="form-group col-lg-4 col-md-8">
+					  		<button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="NFAtoDFA()">Transformar a DFA</button>	
+			        	</div>
+			        	<div class="form-group col-lg-4 col-md-8">
+					  		<button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoRegex()">Transformar a Regex</button>	
+			        	</div>			        
+			      	</div>
+			    </div>
+		  	</div>		  
 		</div>  
 	</div>
 	<div>
