--- a/VIEWS/DFA.html
+++ b/VIEWS/DFA.html
@@ -26,12 +26,10 @@
 				  	</div>
 				</div>
 		        <div class="form-group col-lg-4 col-md-8">
-				  <label></label>
 				  <button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="DFAtoNFA()">Transformar a NFA</button>	
 		        </div>
 		        <div class="form-group col-lg-4 col-md-8">
-				  <label>Transformar a Regex</label>
-				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="DFAtoRegex()"></button>	
+				  <button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="DFAtoRegex()">Transformar a Regex</button>	
 		        </div>			        
 		      </div>
 		    </div>
