--- a/VIEWS/REGEX.html
+++ b/VIEWS/REGEX.html
@@ -21,15 +21,15 @@
 						  	<div class="dropdown-menu">
 						    	<div class="form-group col-lg-12 col-md-12">
 						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
-						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeString()">Verificar</button>		
+						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeRegex()">Verificar</button>		
 				        		</div>
 						  	</div>
 						</div>
 		        		<div class="form-group col-lg-4 col-md-8">
-				  			<button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="NFAtoDFA()">Transformar a DFA</button>	
+				  			<button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="regexToDFA()">Transformar a DFA</button>	
 		        		</div>
 		        		<div class="form-group col-lg-4 col-md-8">
-					  		<button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoRegex()">Transformar a Regex</button>	
+					  		<button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="regexToNFA()">Transformar a NFA</button>	
 			        	</div>			        
 		      		</div>
 		    	</div>
