verify regex finished

--- a/VIEWS/REGEX.html
+++ b/VIEWS/REGEX.html
@@ -19,9 +19,9 @@
 						    	Probar cadena
 						  	</button>
 						  	<div class="dropdown-menu">
-						    	<div class="form-group col-lg-12 col-md-12">
+						    	<div class="col-lg-12 col-md-12">
 						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
-						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeRegex()">Verificar</button>		
+						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="verifyRegex()">Verificar</button>		
 				        		</div>
 						  	</div>
 						</div>
