--- a/VIEWS/REGEX.html
+++ b/VIEWS/REGEX.html
@@ -16,7 +16,7 @@
 		      		<div class="row">
 		        		<div class="form-group btn-group col-lg-4 col-md-8">
 						  	<button type="button" class="btn btn-danger btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						    	Probar cadena
+						    	Evaluar Regex
 						  	</button>
 						  	<div class="dropdown-menu">
 						    	<div class="col-lg-12 col-md-12">
