--- a/VIEWS/DFA.html
+++ b/VIEWS/DFA.html
@@ -16,7 +16,7 @@
 		      <div class="row">
 		      	<div class="form-group btn-group col-lg-4 col-md-8">
 				  	<button type="button" class="btn btn-danger btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				    	Probar cadena
+				    	Consumir cadena
 				  	</button>
 				  	<div class="dropdown-menu">
 				    	<div class="form-group col-lg-12 col-md-12">
