Validaciones en DFA, Fixing bug

--- a/VIEWS/DFA.html
+++ b/VIEWS/DFA.html
@@ -6,7 +6,7 @@
 	<canvas id="canvas" width="800" height="600">
 		<span class="error">Su navegador no soporta<br> HTML5 &lt;canvas&gt; element</span>
 	</canvas>
-	<center><span>Mensaje de  Validación de DFA</span></center>
+	<center><span><label id="str_validate">...</label></span></center>
 	<hr>
 	<div id ="actionControl">
 		<center><h3>Acciones</h3></center>			
