--- a/VIEWS/CFG.html
+++ b/VIEWS/CFG.html
@@ -1,6 +1,6 @@
 <section>
     <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> CFG</h2>
-    <p>Cargamos lo del CFG</p>
+    <p>Grámatica de contexto libre</p>
 <section>
 
 </section> 
