--- a/VIEWS/CFGtoCNF.html
+++ b/VIEWS/CFGtoCNF.html
@@ -1,6 +1,6 @@
 <section>
-    <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> CFGtoPDA</h2>
-    <p>Cargamos lo del CFG to PDA</p>
+    <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> CFG to PDA</h2>
+    <p>Convertir una Grámatica de contexto libre a una Forma normal conjuntiva</p>
 <section>
 
 </section> 
