--- a/CSS/main.css
+++ b/CSS/main.css
@@ -186,3 +186,17 @@ canvas {
 
 }
 
+.modal.modal-wide .modal-dialog {
+  width: 90%;
+}
+
+.modal-wide .modal-body {
+  overflow-y: auto;
+}
+
+body p { 
+  max-width: 400px; 
+  margin: 20px auto; 
+}
+
+#vizModal .modal-body p { margin-bottom: 900px }
