give credits to fsm and viz in maincontent.html

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -194,9 +194,5 @@ canvas {
   overflow-y: auto;
 }
 
-body p { 
-  max-width: 400px; 
-  margin: 20px auto; 
-}
 
-#vizModal .modal-body p { margin-bottom: 900px }
+#vizModal .modal-body { margin-bottom: 900px }
