--- a/VIEWS/MainContent.html
+++ b/VIEWS/MainContent.html
@@ -1,36 +1,45 @@
 <section>
     <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> Acerca</h2>
     <p>La aplicación permite diseñar automatas a nivel gráfico y lógico, incluye herramientas para probar cadenas en los automatas diseñados</p>
-    <section>
-    <h3>Lenguajes Regulares</h3>
-        <p>Los lenguajes regulares son ...</p>
-        <h4>DFA</h4>
-        <p></p>
+</section>
 
-        <h4>NFA</h4>
-        <p></p>
+<section>
+    <table class="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Actividad 1</th>
+                <th>Actividad 2</th>
+                <th>Actividad 3</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>DFA</td>
+                <td>Evaluar cadena</td>
+                <td>Transformar a NFA</td>
+                <td>Transformar a regex</td>
+            </tr>
+            <tr>
+                <td>NFA</td>
+                <td>Evaluar cadena</td>
+                <td>Transformar a DFA</td>
+                <td>Transformar a regex</td>
+            </tr>
+            <tr>
+                <td>Regex</td>
+                <td>Evaluar cadena</td>
+                <td>Transformar a DFA</td>
+                <td>Transformar a NFA</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
 
-        <h4>Regex</h4>
-        <p></p>
-    </section>
-    <section>
-        <h3>Lenguajes de Contexto</h3>
-        <p>Los lenguajes Contexto son ...</p>
-        <h4>PDA</h4>
-        <p></p>
-
-        <h4>CFG</h4>
-        <p></p>
-       
-        <h4>CNF</h4>
-        <p></p>                                
-    </section>
-    <section>
-        <h3>Lenguajes de Decidibles</h3>
-        <p>Los lenguajes Decidibles son ...</p>                            
-        <h4>Turing Machine</h4>
-        <p></p>   
-    </section>
+<section>
+    <h2><i class="fa fa-code-fork fa-3x" aria-hidden="true"></i>Librerías </h2>
+    <li><a href="https://github.com/evanw/fsm">Finite State Machine Designer</a></li>
+    <li><a href="https://github.com/mdaines/viz.js/">Viz JS</a></li>
 </section>
 
 <section>
