change content in maincontent.html

--- a/VIEWS/MainContent.html
+++ b/VIEWS/MainContent.html
@@ -1,10 +1,10 @@
 <section>
     <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> Acerca</h2>
-    <p>La aplicación permite diseñar automatas a nivel gráfico y lógico, incluye herramientas para probar cadenas en los automatas diseñados</p>
+    <p>La aplicación permite diseñar automatas a nivel gráfico y lógico, incluye herramientas para realizar las siguientes actividades.</p>
 </section>
 
 <section>
-    <table class="table">
+    <table class="table table-bordered table-striped text-center">
         <thead>
             <tr>
                 <th></th>
@@ -31,6 +31,24 @@
                 <td>Evaluar cadena</td>
                 <td>Transformar a DFA</td>
                 <td>Transformar a NFA</td>
+            </tr>
+            <tr>
+                <td>CFG</td>
+                <td>Evaluar cadena</td>
+                <td>Transformar a CNF</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>PDA</td>
+                <td>Evaluar cadena</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Turing Machine</td>
+                <td>Evaluar cadena</td>
+                <td>-</td>
+                <td>-</td>
             </tr>
         </tbody>
     </table>
