add pda view and others

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -195,4 +195,9 @@ canvas {
 }
 
 
-#vizModal .modal-body { margin-bottom: 900px }
+body p { 
+  max-width: 400px; 
+  margin: 20px auto; 
+}
+
+#vizModal .modal-body p { margin-bottom: 900px }
