--- a/VIEWS/CFG.html
+++ b/VIEWS/CFG.html
@@ -1,8 +1,36 @@
 <section>
     <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> CFG</h2>
-    <p>Grámatica de contexto libre</p>
-<section>
-
+</section>
+    <div id ="actionControl">
+		<center><h3>Acciones</h3></center>			
+		<div class="row">
+		  	<div class="col-lg-12 col-md-4">
+		    	<div class="panel-heading">
+		    		<div class="row">
+		    			<label>CFG</label>
+		    			<textarea row="10" class="form-control col-xs-3" id="str_cfg" placeholder="Ingrese CFG"></textarea>
+		    		</div>
+		    		<hr>
+		      		<div class="row">
+		        		<div class="form-group btn-group col-lg-4 col-md-8">
+						  	<button type="button" class="btn btn-danger btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						    	Evaluar CFG
+						  	</button>
+						  	<div class="dropdown-menu">
+						    	<div class="col-lg-12 col-md-12">
+						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
+						  			<button type="button" class="btn btn-primary" id ="MarginButton" >Verificar</button>		
+				        		</div>
+						  	</div>
+						</div>
+		        		<div class="form-group col-lg-4 col-md-8">
+				  			<button type="button" class="btn btn-success btn-md" id ="MarginButton" >Transformar a CNF</button>	
+		        		</div>		        
+		      		</div>
+		    	</div>
+		  	</div>		  
+		</div>  
+	</div>
 </section> 
 
                   
