--- a/VIEWS/MainContent.html
+++ b/VIEWS/MainContent.html
@@ -1,6 +1,6 @@
 <section>
     <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> Acerca</h2>
-    <p>La aplicación permite diseñar automatas a nivel gráfico y lógico, incluye herramientas para realizar las siguientes actividades.</p>
+    <p>La aplicación permite diseñar automatas a nivel gráfico y lógico, incluye herramientas para realizar las siguientes acciones.</p>
 </section>
 
 <section>
@@ -8,9 +8,9 @@
         <thead>
             <tr>
                 <th></th>
-                <th>Actividad 1</th>
-                <th>Actividad 2</th>
-                <th>Actividad 3</th>
+                <th>Acción 1</th>
+                <th>Acción 2</th>
+                <th>Acción 3</th>
             </tr>
         </thead>
         <tbody>
