--- a/VIEWS/PDA.html
+++ b/VIEWS/PDA.html
@@ -1,6 +1,6 @@
 <section>
-    <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> NFA</h2>
-    <p>Autómata Finito No Deterministico</p>
+    <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> PDA</h2>
+    <p>Push Down Automata</p>
 </section>
 <section>
 	<canvas id="canvas" width="800" height="600">
@@ -21,7 +21,7 @@
 						  	<div class="dropdown-menu">
 						    	<div class="form-group col-lg-12 col-md-12">
 						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
-						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringNFA()">Probar</button>		
+						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringPDA()">Probar</button>		
 				        		</div>
 						  	</div>
 						</div>       
