add pda view and others

--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -16,12 +16,12 @@
 			      	<div class="row">
 			      		<div class="form-group btn-group col-lg-4 col-md-8">
 						  	<button type="button" class="btn btn-danger btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						    	Consumir cadena
+						    	Evaluar cadena
 						  	</button>
 						  	<div class="dropdown-menu">
 						    	<div class="form-group col-lg-12 col-md-12">
 						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
-						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringNFA()">Probar</button>		
+						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringNFA()">Verificar</button>		
 				        		</div>
 						  	</div>
 						</div>
