failed to make niceConsume

--- a/VIEWS/DFA.html
+++ b/VIEWS/DFA.html
@@ -21,7 +21,7 @@
 				  	<div class="dropdown-menu">
 				    	<div class="form-group col-lg-12 col-md-12">
 				    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
-				  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringDFA()">Verificar</button>		
+				  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringDFA(accepted())">Verificar</button>		
 		        		</div>
 				  	</div>
 				</div>
