--- a/VIEWS/MainContent.html
+++ b/VIEWS/MainContent.html
@@ -4,13 +4,13 @@
 </section>
 
 <section>
-    <table class="table table-bordered table-striped text-center">
+    <table>
         <thead>
             <tr>
-                <th></th>
-                <th>Acción 1</th>
-                <th>Acción 2</th>
-                <th>Acción 3</th>
+                <th><center>Herramienta</center></th>
+                <th><center>Acción 1</center></th>
+                <th><center>Acción 2</center></th>
+                <th><center>Acción 3</center></th>
             </tr>
         </thead>
         <tbody>
