--- a/VIEWS/REGEX.html
+++ b/VIEWS/REGEX.html
@@ -1,5 +1,5 @@
 <section>
-    <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> REGEX</h2>
+    <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> REGEX</h2>
     <p>Expresiones Regulares</p>
 </section>
 <section>
