--- a/VIEWS/CFG.html
+++ b/VIEWS/CFG.html
@@ -1,5 +1,5 @@
 <section>
-    <h2><i class="fa fa-info fa-3x" aria-hidden="true"></i> CFG</h2>
+    <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> CFG</h2>
 </section>
     <div id ="actionControl">
 		<center><h3>Acciones</h3></center>			
