--- a/VIEWS/TMACHINE.html
+++ b/VIEWS/TMACHINE.html
@@ -1,5 +1,10 @@
 <section>
     <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> Turing Machine</h2>
+    <div class="row">
+    	<button type="button" class="btn btn-primary btn-md col-xs-offset-2 col-xs-2" onclick="restoreBackup('tm1')">Ejemplo 1</button>
+    	<button type="button" class="btn btn-primary btn-md col-xs-offset-1 col-xs-2" onclick="restoreBackup('tm2')">Ejemplo 1</button>
+    	<button type="button" class="btn btn-danger btn-md col-xs-offset-1 col-xs-2" onclick="clear()">Limpiar</button>
+    </div>
 </section>
 <section>
 	<canvas id="canvas" width="800" height="600">
@@ -20,7 +25,7 @@
 						  	<div class="dropdown-menu">
 						    	<div class="form-group col-lg-12 col-md-12">
 						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
-						  			<button type="button" class="btn btn-primary" id ="MarginButton">Verificar</button>		
+						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="consumeStringTM()">Verificar</button>		
 				        		</div>
 						  	</div>
 						</div>       
