--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -4,7 +4,7 @@
     <div class="row">
     	<button type="button" class="btn btn-primary btn-md col-xs-offset-2 col-xs-2" onclick="restoreBackup('nfa1')">Ejemplo 1</button>
     	<button type="button" class="btn btn-primary btn-md col-xs-offset-1 col-xs-2" onclick="restoreBackup('nfa2')">Ejemplo 2</button>
-    	<button type="button" class="btn btn-danger btn-md col-xs-offset-1 col-xs-2" onclick="clear()">Limpiar</button>
+    	<button type="button" class="btn btn-danger btn-md col-xs-offset-1 col-xs-2" onclick="clearCanvas()">Limpiar</button>
     </div>
 </section>
 <section>
@@ -51,7 +51,9 @@
 			<li><b>Borrar algo:</b> click en el objeto y apretar la tecla Delete-Suprimir.</li>
 			<li><b>Hacer un estado de aceptación:</b> doble click en un estado existente.</li>
 			<li><b>Escribir un símbolo de transición:</b>poner un guión bajo antes del número(Ejemplo "X_0").</li>
-			<li><b>Tipo letra griega:</b> Poner una barra invertida antes (como "\ Ejemplo").</li>			
+			<li><b>Tipo letra griega:</b> Poner una barra invertida antes (como "\ Ejemplo").</li>
+			<li><b>Las transicones se escriben de la siguiente manera: input,pop->push</b></li>
+			<li><b>'#' es el valor epsilon</b></li>
 		</ul>
 	</div>
 </section>     
