--- a/VIEWS/PDA.html
+++ b/VIEWS/PDA.html
@@ -4,7 +4,7 @@
     <div class="row">
     	<button type="button" class="btn btn-primary btn-md col-xs-offset-2 col-xs-2" onclick="restoreBackup('pda1')">Ejemplo 1</button>
     	<button type="button" class="btn btn-primary btn-md col-xs-offset-1 col-xs-2" onclick="restoreBackup('pda2')">Ejemplo 2</button>
-    	<button type="button" class="btn btn-danger btn-md col-xs-offset-1 col-xs-2" onclick="clear()">Limpiar</button>
+    	<button type="button" class="btn btn-danger btn-md col-xs-offset-1 col-xs-2" onclick="clearCanvas()">Limpiar</button>
     </div>
 </section>
 <section>
