--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -2,8 +2,8 @@
     <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> NFA</h2>
     <p>Autómata Finito No Deterministico</p>
     <div class="row">
-    	<button type="button" class="btn btn-primary btn-md col-xs-offset-2 col-xs-2" onclick="restoreBackup('nfa1')">Ejemplo 1</button>
-    	<button type="button" class="btn btn-primary btn-md col-xs-offset-1 col-xs-2" onclick="restoreBackup('nfa2')">Ejemplo 2</button>
+    	<button type="button" class="btn btn-primary btn-md col-xs-offset-2 col-xs-2" onclick="restoreBackup2(2)">Ejemplo 1</button>
+    	<button type="button" class="btn btn-primary btn-md col-xs-offset-1 col-xs-2" onclick="restoreBackup2(3)">Ejemplo 2</button>
     	<button type="button" class="btn btn-danger btn-md col-xs-offset-1 col-xs-2" onclick="clearCanvas()">Limpiar</button>
     </div>
 </section>
