--- a/VIEWS/PDA.html
+++ b/VIEWS/PDA.html
@@ -2,8 +2,8 @@
     <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> PDA</h2>
     <p>Push Down Automata</p>
     <div class="row">
-    	<button type="button" class="btn btn-primary btn-md col-xs-offset-2 col-xs-2" onclick="restoreBackup('pda1')">Ejemplo 1</button>
-    	<button type="button" class="btn btn-primary btn-md col-xs-offset-1 col-xs-2" onclick="restoreBackup('pda2')">Ejemplo 2</button>
+    	<button type="button" class="btn btn-primary btn-md col-xs-offset-2 col-xs-2" onclick="restoreBackup2(0)">Ejemplo 1</button>
+    	<button type="button" class="btn btn-primary btn-md col-xs-offset-1 col-xs-2" onclick="restoreBackup2(1)">Ejemplo 2</button>
     	<button type="button" class="btn btn-danger btn-md col-xs-offset-1 col-xs-2" onclick="clearCanvas()">Limpiar</button>
     </div>
 </section>
