--- a/VIEWS/TURING.html
+++ b/VIEWS/TURING.html
@@ -208,7 +208,7 @@ integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7
                         <div class="navbar-collapse collapse sidebar-navbar-collapse">
                             <ul class="nav navbar-nav" id="sidenav01">
                                 <li class="active">
-                                    <a class="collapsed" data-parent="#sidenav01" data-target="#toggleDemo0" data-toggle="collapse" href="index.html">
+                                    <a class="collapsed" data-parent="#sidenav01" data-target="#toggleDemo0" data-toggle="collapse" href="../index.html">
                                     <h4><span class=""><img src="../IMG/owl.png" style="height:80px; width:80px;"></span>Buhos <br>
                                     Herramientas</h4></a>
                                 </li>
