--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -34,7 +34,7 @@
 					  		<button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="NFAtoDFA()" >Transformar a DFA</button>	
 			        	</div>
 			        	<div class="form-group col-lg-4 col-md-8">
-					  		<button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoRegex()">Transformar a Regex</button>	
+					  		<button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoREGEX()">Transformar a Regex</button>	
 			        	</div>			        
 			      	</div>
 			    </div>
