--- a/VIEWS/TURING.html
+++ b/VIEWS/TURING.html
@@ -18,9 +18,9 @@ integrity="sha384-mvYjhBJXQ9VlNETV/xXShy849GsBHnKzVVudnMOcWUVM/6Nd2ksj8VNng5f8yl
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
 integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
-<link href="CSS/main.css" type="text/css" rel="stylesheet">
-<script src="JS/sweetalert.min.js"></script>
-<link rel="stylesheet" type="text/css" href="CSS/sweetalert.css">   
+<link href="../CSS/main.css" type="text/css" rel="stylesheet">
+<script src="../JS/sweetalert.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../CSS/sweetalert.css">   
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn"t work if you view the page via file:// -->
 <!--[if lt IE 9]>
