--- a/VIEWS/NFA.html
+++ b/VIEWS/NFA.html
@@ -33,8 +33,12 @@
 			        	<div class="form-group col-lg-4 col-md-8">
 					  		<button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="NFAtoDFA()" >Transformar a DFA</button>	
 			        	</div>
-			        	<div class="form-group col-lg-4 col-md-8">
-					  		<button type="button" class="btn btn-warning btn-md" id ="MarginButton" onclick="NFAtoREGEX()">Transformar a Regex</button>	
+			        	
+				        <div class="form-group col-lg-4 col-md-8">
+						  		<button type="button" class="btn btn-warning btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id ="MarginButton" onclick="NFAtoREGEX()">Transformar a Regex</button>					       	
+					        	<div class="dropdown-menu">
+					        		<center><strong><label id="str_expresion">...</label></strong></center>
+					        	</div>
 			        	</div>			        
 			      	</div>
 			    </div>
