--- a/VIEWS/CFG.html
+++ b/VIEWS/CFG.html
@@ -1,36 +1,43 @@
 <section>
     <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> CFG</h2>
 </section>
-    <div id ="actionControl">
-		<center><h3>Acciones</h3></center>			
-		<div class="row">
-		  	<div class="col-lg-12 col-md-4">
-		    	<div class="panel-heading">
-		    		<div class="row">
-		    			<label>CFG</label>
-		    			<textarea row="10" class="form-control col-xs-3" id="str_cfg" placeholder="Ingrese CFG"></textarea>
-		    		</div>
-		    		<hr>
-		      		<div class="row">
-		        		<div class="form-group btn-group col-lg-4 col-md-8">
-						  	<button type="button" class="btn btn-danger btn-md dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						    	Evaluar CFG
-						  	</button>
-						  	<div class="dropdown-menu">
-						    	<div class="col-lg-12 col-md-12">
-						    		<input type="text" class="form-control col-xs-3" id="str_cadena" placeholder="Ingrese la cadena a probar">
-						  			<button type="button" class="btn btn-primary" id ="MarginButton" onclick="evaluateCFG()">Verificar</button>		
-				        		</div>
-						  	</div>
-						</div>
-		        		<div class="form-group col-lg-4 col-md-8">
-				  			<button type="button" class="btn btn-success btn-md" id ="MarginButton" onclick="toCNF()">Transformar a CNF</button>	
-		        		</div>		        
-		      		</div>
-		    	</div>
-		  	</div>		  
-		</div>  
-	</div>
-</section> 
-
-                  
+  <div>
+    <h1>Instructions</h1>
+    <ul class="instructions-list">
+      <li>The left-hand nonterminal of each production must be filled in.</li>
+      <li>[ ε ] - An empty text field corresponds to epsilon.</li>
+      <li>[ <strong>|</strong> ] - For "or", use the standard pipe character that you use while coding or click "+".</li>
+      <li>Input is case-sensitive. Whitespace is ignored.</li>
+    </ul><p class="instructions">Input your context-free grammar (CFG) here. The start symbol has already been filled in for you.</p>
+    
+    <button type="button" class="btn btn-danger" id="reset" title="Reset the current CFG">Reset</button>
+    <button type="button" class="btn btn-info" id="example" title="Fill in an example CFG">Example</button>
+    <form class="form-horizontal" id="grammar" role="form"><div class="production-row"><div class="col-xs-nt"><input type="text" class="form-control nonterminal" maxlength="1" value="S" readonly="readonly" id="start-symbol"></div><div class="arrow">→</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="remove"><span class="glyphicon glyphicon-remove-circle remove-button" title="Remove last production"></span></div><div class="add-rule"><span class="glyphicon glyphicon glyphicon-plus add-rule-button" title="Add new production"></span></div></div><div class="clearfix"></div><div class="production-row"><div class="col-xs-nt"><input type="text" class="form-control nonterminal" maxlength="1"></div><div class="arrow">→</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="remove"><span class="glyphicon glyphicon-remove-circle remove-button" title="Remove last production"></span></div><div class="add-rule"><span class="glyphicon glyphicon glyphicon-plus add-rule-button" title="Add new production"></span></div></div><div class="clearfix"></div></form>
+    <div class="clearfix"></div>
+  
+    <div class="col-xs-6 new-production">
+      <button id="new-production" type="button" class="btn btn-default btn-lg btn-block" title="Create a new production">
+        <span class="glyphicon glyphicon-plus"></span> &nbsp;Click here or press "Enter" for a new production
+      </button>
+    </div>
+    <div class="clearfix"></div>
+  
+    <h1>Test</h1>
+    <div class="col-xs-12">
+      <textarea class="form-control" id="test-input" placeholder="Write your test strings here..." rows="6" wrap="off"></textarea>
+    </div>
+  
+    <div class="col-xs-12">
+      <table class="table table-striped table-hover" id="results-table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th></th>
+            <th>Matches</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody id="results"><tr class="success"><td>1</td><td>"1+2"</td><td>Yes</td><td class="derivation-cell"></td></tr><tr class="derivation-row active">      </table>
+    </div>
+  </div>
+</section>
