--- a/VIEWS/CFG.html
+++ b/VIEWS/CFG.html
@@ -2,16 +2,8 @@
     <h2><i class="fa fa-rupee fa-3x" aria-hidden="true"></i> CFG</h2>
 </section>
   <div>
-    <h1>Instructions</h1>
-    <ul class="instructions-list">
-      <li>The left-hand nonterminal of each production must be filled in.</li>
-      <li>[ ε ] - An empty text field corresponds to epsilon.</li>
-      <li>[ <strong>|</strong> ] - For "or", use the standard pipe character that you use while coding or click "+".</li>
-      <li>Input is case-sensitive. Whitespace is ignored.</li>
-    </ul><p class="instructions">Input your context-free grammar (CFG) here. The start symbol has already been filled in for you.</p>
-    
     <button type="button" class="btn btn-danger" id="reset" title="Reset the current CFG">Reset</button>
-    <button type="button" class="btn btn-info" id="example" title="Fill in an example CFG">Example</button>
+    <button type="button" class="btn btn-info" id="example" title="Fill in an example CFG">Ejemplo</button>
     <form class="form-horizontal" id="grammar" role="form"><div class="production-row"><div class="col-xs-nt"><input type="text" class="form-control nonterminal" maxlength="1" value="S" readonly="readonly" id="start-symbol"></div><div class="arrow">→</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="remove"><span class="glyphicon glyphicon-remove-circle remove-button" title="Remove last production"></span></div><div class="add-rule"><span class="glyphicon glyphicon glyphicon-plus add-rule-button" title="Add new production"></span></div></div><div class="clearfix"></div><div class="production-row"><div class="col-xs-nt"><input type="text" class="form-control nonterminal" maxlength="1"></div><div class="arrow">→</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="or">|</div><div class="col-xs-pr"><input type="text" class="form-control rule" placeholder="ε"></div><div class="remove"><span class="glyphicon glyphicon-remove-circle remove-button" title="Remove last production"></span></div><div class="add-rule"><span class="glyphicon glyphicon glyphicon-plus add-rule-button" title="Add new production"></span></div></div><div class="clearfix"></div></form>
     <div class="clearfix"></div>
   
@@ -22,7 +14,7 @@
     </div>
     <div class="clearfix"></div>
   
-    <h1>Test</h1>
+    <h1>Input</h1>
     <div class="col-xs-12">
       <textarea class="form-control" id="test-input" placeholder="Write your test strings here..." rows="6" wrap="off"></textarea>
     </div>
